--- a/BCA_TELECOMUNICACIONES/nbproject/project.properties
+++ b/BCA_TELECOMUNICACIONES/nbproject/project.properties
@@ -57,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=bca_telecomunicaciones.BCA_TELECOMUNICACIONES
+main.class=bca_telecomunicaciones.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
