--- a/BCA_TELECOMUNICACIONES/nbproject/project.properties
+++ b/BCA_TELECOMUNICACIONES/nbproject/project.properties
@@ -30,11 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.3.3.jar=../Libraries/jcalendar-1.3.3.jar
+file.reference.mysql-connector-java-8.0.22.jar=..\\Libraries\\mysql-connector-java-8.0.22.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
-    ${file.reference.jcalendar-1.3.3.jar}
+    ${file.reference.jcalendar-1.3.3.jar}:\
+    ${file.reference.mysql-connector-java-8.0.22.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
